--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				z-index: 2;
 			}
 		</style>
-		<title>丰子恺与四季诗画</title>
+		<title>四季——秋</title>
 		    <script type="text/javascript">
 				window.onload=function(){
 					
